User Input: Fix Tab/User Input z-index issue when mobile keyboard open

--- a/css/forum.css
+++ b/css/forum.css
@@ -1388,6 +1388,12 @@ img-crop canvas {
   margin-bottom: 10px;
 }
 
+#mobilePreview {
+  position: relative;
+  height: 150px;
+  margin-bottom: 10px;
+}
+
 #fileWarning {
   padding-left: 10px;
 }
@@ -1414,6 +1420,7 @@ img-crop canvas {
   position: fixed;
   width: 100%;
   bottom: 0%;
+  z-index: 2;
 }
 
 #mobileUploadControls {
@@ -1428,8 +1435,7 @@ img-crop canvas {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-#mobilePreview {
+#inputControls {
   position: relative;
-  height: 150px;
-  margin-bottom: 10px;
+  z-index: 0;
 }
